<resources>
    <string name="app_name">Game</string>
    <string name="action_settings">Settings</string>
    <string name="difficult">Difficult</string>
    <string name="easy">Easy</string>
    <string name="middle">Middle</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="start">start</string>
    <string name="help">Help</string>
    <string name="setting">Settings</string>
    <string name="difficulty">difficulty</string>
    <string name="gameName">sokudo</string>
    <string name="password">Password</string>
    <string name="title_activity_game_list">GameList</string>
</resources>
